# beyond-campus-scraper

./: .env.example  .gitignore  pyproject.toml
scrapper/: cli.py
scrapper/core/: config.py  cost.py  llm.py  scraper.py  storage.py
scrapper/pipelines/university/: pipeline.py  schemas.py  tasks.py
